@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2020 the original author or authors.
+ * Copyright 2012-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,12 +17,9 @@
 package org.springframework.boot.maven;
 
 import java.io.File;
-import java.io.FileReader;
 import java.io.FileWriter;
 import java.io.IOException;
 import java.io.PrintWriter;
-import java.io.Reader;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.FileVisitResult;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -47,6 +44,8 @@ import org.apache.maven.shared.invoker.InvocationResult;
 import org.apache.maven.shared.invoker.Invoker;
 import org.apache.maven.shared.invoker.MavenInvocationException;
 
+import org.springframework.util.FileSystemUtils;
+
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.contentOf;
 
@@ -62,7 +61,7 @@ class MavenBuild {
 
 	private final File temp;
 
-	private final Map<String, String> pomReplacements = new HashMap<>();
+	private final Map<String, String> pomReplacements;
 
 	private final List<String> goals = new ArrayList<>();
 
@@ -74,24 +73,26 @@ class MavenBuild {
 
 	MavenBuild(File home) {
 		this.home = home;
+		this.temp = createTempDirectory();
+		this.pomReplacements = getPomReplacements();
+	}
+
+	private File createTempDirectory() {
 		try {
-			this.temp = Files.createTempDirectory("maven-build").toFile().getCanonicalFile();
+			return Files.createTempDirectory("maven-build").toFile().getCanonicalFile();
 		}
 		catch (IOException ex) {
-			throw new RuntimeException(ex);
+			throw new IllegalStateException(ex);
 		}
-		this.pomReplacements.put("java.version", "1.8");
-		this.pomReplacements.put("project.groupId", "org.springframework.boot");
-		this.pomReplacements.put("project.artifactId", "spring-boot-maven-plugin");
-		this.pomReplacements.put("project.version", determineVersion());
-		this.pomReplacements.put("log4j2.version", "2.12.1");
-		this.pomReplacements.put("maven-jar-plugin.version", "3.2.0");
-		this.pomReplacements.put("maven-toolchains-plugin.version", "3.0.0");
-		this.pomReplacements.put("maven-war-plugin.version", "3.2.3");
-		this.pomReplacements.put("build-helper-maven-plugin.version", "3.0.0");
-		this.pomReplacements.put("spring-framework.version", "5.2.1.RELEASE");
-		this.pomReplacements.put("jakarta-servlet.version", "4.0.2");
-		this.pomReplacements.put("kotlin.version", "1.3.60");
+	}
+
+	private Map<String, String> getPomReplacements() {
+		Map<String, String> replacements = new HashMap<>();
+		replacements.put("java.version", "17");
+		replacements.put("project.groupId", "org.springframework.boot");
+		replacements.put("project.artifactId", "spring-boot-maven-plugin");
+		replacements.putAll(new Versions().asMap());
+		return Collections.unmodifiableMap(replacements);
 	}
 
 	MavenBuild project(String project) {
@@ -129,7 +130,7 @@ class MavenBuild {
 		try {
 			Path destination = this.temp.toPath();
 			Path source = this.projectDir.toPath();
-			Files.walkFileTree(source, new SimpleFileVisitor<Path>() {
+			Files.walkFileTree(source, new SimpleFileVisitor<>() {
 
 				@Override
 				public FileVisitResult preVisitDirectory(Path dir, BasicFileAttributes attrs) throws IOException {
@@ -140,12 +141,12 @@ class MavenBuild {
 				@Override
 				public FileVisitResult visitFile(Path file, BasicFileAttributes attrs) throws IOException {
 					if (file.toFile().getName().equals("pom.xml")) {
-						String pomXml = new String(Files.readAllBytes(file), StandardCharsets.UTF_8);
+						String pomXml = Files.readString(file);
 						for (Entry<String, String> replacement : MavenBuild.this.pomReplacements.entrySet()) {
 							pomXml = pomXml.replace("@" + replacement.getKey() + "@", replacement.getValue());
 						}
-						Files.write(destination.resolve(source.relativize(file)),
-								pomXml.getBytes(StandardCharsets.UTF_8), StandardOpenOption.CREATE_NEW);
+						Files.writeString(destination.resolve(source.relativize(file)), pomXml,
+								StandardOpenOption.CREATE_NEW);
 					}
 					else {
 						Files.copy(file, destination.resolve(source.relativize(file)),
@@ -155,14 +156,10 @@ class MavenBuild {
 				}
 
 			});
-			String settingsXml = new String(Files.readAllBytes(Paths.get("src", "intTest", "projects", "settings.xml")),
-					StandardCharsets.UTF_8)
-							.replace("@localCentralUrl@",
-									new File("build/int-test-maven-repository").toURI().toURL().toString())
-							.replace("@localRepositoryPath@",
-									new File("build/local-maven-repository").getAbsolutePath());
-			Files.write(destination.resolve("settings.xml"), settingsXml.getBytes(StandardCharsets.UTF_8),
-					StandardOpenOption.CREATE_NEW);
+			String settingsXml = Files.readString(Paths.get("src", "intTest", "projects", "settings.xml"))
+				.replace("@localCentralUrl@", new File("build/int-test-maven-repository").toURI().toURL().toString())
+				.replace("@localRepositoryPath@", new File("build/local-maven-repository").getAbsolutePath());
+			Files.writeString(destination.resolve("settings.xml"), settingsXml, StandardOpenOption.CREATE_NEW);
 			request.setBaseDirectory(this.temp);
 			request.setJavaHome(new File(System.getProperty("java.home")));
 			request.setProperties(this.properties);
@@ -170,6 +167,7 @@ class MavenBuild {
 			request.setUserSettingsFile(new File(this.temp, "settings.xml"));
 			request.setUpdateSnapshots(true);
 			request.setBatchMode(true);
+			// request.setMavenOpts("-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=8000");
 			File target = new File(this.temp, "target");
 			target.mkdirs();
 			if (this.preparation != null) {
@@ -194,20 +192,8 @@ class MavenBuild {
 		catch (Exception ex) {
 			throw new RuntimeException(ex);
 		}
-	}
-
-	private String determineVersion() {
-		File gradleProperties = new File("gradle.properties").getAbsoluteFile();
-		while (!gradleProperties.isFile()) {
-			gradleProperties = new File(gradleProperties.getParentFile().getParentFile(), "gradle.properties");
-		}
-		Properties properties = new Properties();
-		try (Reader reader = new FileReader(gradleProperties)) {
-			properties.load(reader);
-			return properties.getProperty("version");
-		}
-		catch (IOException ex) {
-			throw new RuntimeException(ex);
+		finally {
+			FileSystemUtils.deleteRecursively(this.temp);
 		}
 	}
 
